Fix relative position of faktaboks on mobile

--- a/assets/scss/base/baseline.scss
+++ b/assets/scss/base/baseline.scss
@@ -24,8 +24,6 @@ main {
   color: rgb(95, 194, 255);
   border-radius: 10px;
   font-style: italic;
-  position: relative;
-  right: 2rem;
 }
 
 .lastblock {
@@ -41,5 +39,9 @@ h2, h3 {
   .mainGrid {
     display: grid;
     grid-template-columns: 2fr 3fr 2fr;
+  }
+  .faktaboks {
+    position: relative;
+    right: 2rem;
   }
 }
